--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: #202124;
+  background-image: url("/assets/abstrak.jpg");
   background-position: center;
   background-repeat: repeat;
   color: #cecece;
@@ -74,13 +74,8 @@ span {
   font-family: lighter;
   font-size: 17px;
   text-shadow: 4px 4px 5px rgb(0, 0, 0);
-  background: linear-gradient(
-    45deg,
-    #ccccccd5,
-    #ffffffe2,
-    #cccccc
-  ); /* Efek gradien */
-  -webkit-background-clip: text; /* Diperlukan untuk browser WebKit (Safari, Chrome) */
+  background: linear-gradient(45deg, #ccccccd5, #ffffffe2, #cccccc);
+  -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
 }
