--- a/css/style.css
+++ b/css/style.css
@@ -14,248 +14,84 @@ body {
 }
 
 .layout1 {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 header {
-  background: linear-gradient(45deg, #cccccc00, #00000015, #00000048);
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 573);
-  border-radius: 10px;
-  border: 4px outset rgb(0, 0, 0);
-  border-color: #000000;
-  height: 60px;
-  padding-bottom: 6px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-span {
-  padding-left: 8px;
-}
-
-.custom-button {
-  list-style: none;
-  padding: 4px;
-  cursor: pointer;
-  width: 15vw;
-  height: auto;
-}
-
-#persegi:hover {
-  color: rgb(0, 0, 0);
-}
-#persegi:active {
-  transform: translateY(2px);
-}
-
-.outset {
-  background-color: #00000022;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 573);
-  border: 4px outset rgb(0, 0, 0);
-  padding: 6px;
-  border-color: #000000;
-  border-radius: 10px;
-  width: 250px;
-  height: 100vh;
-}
-
-.inset p {
-  background: linear-gradient(45deg, #cccccc00, #00000015, #00000048);
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 573);
-  border: 3px outset rgb(0, 0, 0);
-  text-align: center;
-  border-color: #000000;
-  border-radius: 4px;
-  padding: 4px;
-}
-
-.inset li {
-  font-family: lighter;
-  font-size: 17px;
-  text-shadow: 4px 4px 5px rgb(0, 0, 0);
-  background: linear-gradient(45deg, #ccccccd5, #ffffffe2, #cccccc);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-}
-
-.layout3 {
-  background: linear-gradient(
-    to bottom,
-    #00000020,
-    #00000040,
-    #00000040,
-    #00000080
-  );
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 573);
-  border-radius: 10px;
-  border: 4px outset rgb(0, 0, 0);
-}
-
-.tampilan {
-  display: none;
-  margin-left: 40px;
-  margin-right: 20px;
-}
-
-#default {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.main-gambar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-img {
-  height: 30vh;
-  width: 15vw;
-}
-
-.isi h1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #cecece;
-}
-
-.isi input {
-  background-color: rgba(255, 255, 255, 0.059);
-  border-radius: 6px;
-  color: #cecece;
-  height: auto;
-  width: 10%;
-  padding: 10px;
-}
-
-button {
-  text-align: center;
-  height: auto;
-  width: auto;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
-  border: 3px outset rgb(0, 0, 0);
-  background-color: #00000022;
-  cursor: pointer;
-  color: #cecece;
-  padding: 10px;
-}
-
-button:hover {
-  background-color: rgba(0, 0, 0, 0.368);
-}
-
-button:active {
-  background-color: #0000009d;
-  transform: translateY(1px);
-}
-
-.flexBox {
-  display: none;
-  justify-content: flex-end;
-  align-items: flex-end;
-  gap: 20px;
-  margin-top: 20px;
-  margin-left: 45px;
-}
-body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: #202124;
-  background-position: center;
-  background-repeat: repeat;
-  color: #cecece;
-  padding: 20px;
-}
-
-.__container-main-layout {
-  display: grid;
-  grid-template-columns: 1fr 4fr;
-}
-
-.layout1 {
-  margin-bottom: 30px;
-}
-
-header {
-  background: linear-gradient(45deg, #cccccc00, #00000015, #00000048);
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 573);
-  border-radius: 10px;
-  border: 4px outset rgb(0, 0, 0);
-  border-color: #000000;
-  height: 60px;
-  padding-bottom: 6px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-span {
-  padding-left: 8px;
-}
-
-.custom-button {
-  list-style: none;
-  padding: 4px;
-  cursor: pointer;
-  width: 15vw;
-  height: auto;
-}
-
-#persegi:hover {
-  color: rgb(0, 0, 0);
-}
-#persegi:active {
-  transform: translateY(2px);
-}
-
-.outset {
-  background-color: #00000022;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 573);
-  border: 4px outset rgb(0, 0, 0);
-  padding: 6px;
-  border-color: #000000;
-  border-radius: 10px;
-  width: 250px;
-  height: 100vh;
-}
-
-.inset p {
-  background: linear-gradient(45deg, #cccccc00, #00000015, #00000048);
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 573);
-  border: 3px outset rgb(0, 0, 0);
-  text-align: center;
-  border-color: #000000;
-  border-radius: 4px;
-  padding: 4px;
-}
-
-.inset li {
-  font-family: lighter;
-  font-size: 17px;
-  text-shadow: 4px 4px 5px rgb(0, 0, 0);
   background: linear-gradient(
     45deg,
-    #ccccccd5,
-    #ffffffe2,
-    #cccccc
-  ); /* Efek gradien */
-  -webkit-background-clip: text; /* Diperlukan untuk browser WebKit (Safari, Chrome) */
-  background-clip: text;
-  color: transparent;
+    #00000010,
+    #00000025,
+    #00000038,
+    #00000048,
+    #00000058
+  );
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 573);
+  border-radius: 10px;
+  border: 4px outset rgb(0, 0, 0);
+  border-color: #000000;
+  height: 60px;
+  padding-bottom: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.custom-button {
+  padding: 4px;
+  cursor: pointer;
+  width: 15vw;
+  height: auto;
+}
+
+.custom-button:hover {
+  color: rgba(255, 255, 255, 0.438);
+}
+.custom-button:active {
+  transform: translateY(2px);
+  color: rgba(252, 251, 251, 0.186);
+}
+
+.outset {
+  background-color: #00000042;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 573);
+  border: 4px outset rgb(0, 0, 0);
+  padding: 6px;
+  border-color: #000000;
+  border-radius: 10px;
+  width: 250px;
+  height: 100vh;
+}
+
+.inset p {
+  background: linear-gradient(45deg, #00000010, #00000035, #00000048);
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 573);
+  border: 3px outset rgb(0, 0, 0);
+  text-align: center;
+  border-color: #000000;
+  border-radius: 4px;
+  padding: 4px;
+}
+
+.inset li {
+  list-style: none;
+  font-family: lighter;
+  font-size: 17px;
+}
+
+.keterangan h2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
 }
 
 .layout3 {
   background: linear-gradient(
     to bottom,
-    #00000020,
     #00000040,
-    #00000040,
+    #00000050,
+    #00000060,
     #00000080
   );
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 573);
@@ -276,15 +112,26 @@ span {
   height: 100%;
 }
 
-.main-gambar {
+.isi span {
+  margin-left: 8px;
+}
+
+input {
+  margin: 5px;
+}
+
+.gambarLuas {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
-img {
-  height: 30vh;
-  width: 15vw;
+.gambarKeliling {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .isi h1 {
@@ -292,6 +139,8 @@ img {
   justify-content: center;
   align-items: center;
   color: #cecece;
+}
+img {
 }
 
 .isi input {
@@ -327,9 +176,6 @@ button:active {
 
 .flexBox {
   display: none;
-  justify-content: flex-end;
-  align-items: flex-end;
   gap: 20px;
-  margin-top: 20px;
   margin-left: 45px;
 }
